--- a/TODO.txt
+++ b/TODO.txt
@@ -1,23 +1,23 @@
 
-  UNEXPECTED:
-  * Redo authentication system (!!!)
-  * Redo messaging system (!!!)
+  * Make the new authentication fully work (add user when workspace is created, actually login when login is successful)
 
-  TODAY:
+  * Make Comet messenging work again (it's currently completely broken)
+    * Check hotDojoCometMessages/client/messages.js and hotDojoStores/client/AppStoreNotify.js: "add" needs to check if it's not within
+      "add" like it happens in Observer.js (check if the Observer.js way is indeed sane)
+    * Decide if JsonRestStores should include generic methods, to make messenging db-independent
+
+
   * Move the buttonsConstructor somewhere where it makes more sense
+  * Normalise all the topic.publish namespace, which is messy now. Watch out: comet events are echoed as well, put those in a different ns
+  * Improve the look of widgets: Overlay with reload icon, top bar with shade, pick form, nothingToPick form, etc.
 
-  THIS WEEK:
   * Add a "new contact" form, and a contacts browser/editor. Add ability to type messages underneath contacts. (30 mins and 200 lines of code?)
     Make sure you have "contact type" in the list of configurations
 
-  AND THEN:
-  * Normalise all the topic.publish namespace, which is messy now. Watch out: comet events are echoed as well, put those in a different ns
-  * Improve the look of widgets: Overlay with reload icon, top bar with shade, pick form, nothingToPick form, etc.
-  * Check hotDojoCometMessages/client/messages.js and hotDojoStores/client/AppStoreNotify.js: "add" needs to check if it's not within
-    "add" like it happens in Observer.js (check if the Observer.js way is indeed sane)
+  * Check: http://dojo-toolkit.33424.n3.nabble.com/Question-on-CSS-with-widgets-td3995316.html
 
-  (Check: http://dojo-toolkit.33424.n3.nabble.com/Question-on-CSS-with-widgets-td3995316.html)
-  DEADLINE: 15/4
+  * DOCUMENT THE LOT: Fully document Hotplate: all modules, all Javacript modules, the lot
+
 
   **************************************************************************************************************************
   Note: at this point, I can create a store server-side in 2 minutes, _and_ a view/editing system client-side in 10 minutes.
@@ -29,7 +29,7 @@
 
   * Write messages infrastructure, where app can send messages (email, sms) and then a queue manager sends them recording the
     status. Write modules to send (smtp/sms gateway) _and_ receive (pop/sms gateway) messages. Note: this is simply a very fancy
-    JsonRest store that uses an API
+    JsonRest store
 
   * Integrate message-sending with the current simple comment infrastructure (!). user picks if it's an SMS or if it's an email.
     The sending/editing widget will have to change accordingly (SMSes are given less space, no subject)
@@ -54,32 +54,15 @@
 
   * Make an "booking": an abstract entity with a name and a bunch of people attached. When an email comes in, match it to a booking
 
-
-  "STRUCTURE AND DOCUMENTATION"
-
-  * Comment each function, client and server, decide on a standard (probably node's)
-
   "GET OPINIONS"
 
-  * GET somebody who knows what they are doing to look at all this:
+  * MAYBE Check if there is a better way to include modules, now each function needs to (because of async inits() )
+  * MAYBE Move hotplate's defined stuff (`vars`, etc.) into its own namespace?
 
-    * MAYBE Check if there is a better way to include modules, now each function needs to (because of async inits() )
-    * MAYBE Move hotplate's defined stuff (`vars`, etc.) into its own namespace?
     
-    * MAYBE (Login) Check if there is a better way to "login", right now it sets a bunch of server variables
-    * MAYBE (Login) Check if hotDojoAuth can be used for other systems (like passport, for example)
-    * MAYBE (Login/other) See if there is a better way to create "drivers" where "hooks" just don't cut it (see: authentication)
-    
-    * MAYBE Add function to add per-module routes to make it easier to add URLs
-
-
                           ----------------------------
                           !!  HOTPLATE IS FINISHED  !!
                           ----------------------------
-  "OPINIONS DECIDED"
-
-    * NO  Have a "settings" infrastructure, where modules can define settings widgets which then get added to settings
-    * NO Add functions to hotplate.use() routes allowing definition of stores at the same time (add stores use existing function)
 
   The following is the short TODO list for my own booking system, which is what I was meant to start from day 1 (and was "slightly"
   side tracked by writing a "boilerplate"... err...)
@@ -326,3 +309,9 @@
   * Get rid of the "error" variable in hotError, use allhttperrors instead (like you should)
   * Change that workspaceIdCall into workspaceId
   * Change jsonreststores-mongo so that it deals with sub-stores properly
+  * YES, DONE (Login) Check if there is a better way to "login", right now it sets a bunch of server variables
+  * YES, DONE (Login) Check if hotDojoAuth can be used for other systems (like passport, for example)
+  * YES, DONE (Login/other) See if there is a better way to create "drivers" where "hooks" just don't cut it (see: authentication)
+  * NO, NOT DONE Add function to add per-module routes to make it easier to add URLs
+  * NO, NOT DONE Have a "settings" infrastructure, where modules can define settings widgets which then get added to settings
+  * NO, NOT DONE Add functions to hotplate.use() routes allowing definition of stores at the same time (add stores use existing function)
