--- a/TODO.txt
+++ b/TODO.txt
@@ -3,17 +3,19 @@
 
   * Make the new authentication fully work (add user when workspace is created, actually login when login is successful)
     * --
-    * Complete missing bits (client/server) in the Local strategy
-    * --
-    * Figure out how to handle the recovery process, maybe 2 fields in the login info, a hash and an expiry, AND an URL to reset them?
-      IDEA. They all create a URL, with a temporary hash. Going to that URL makes the user logged in. Only lasts 30 minutes.
+    * Fortify things a little (pages/ws/undefined works?!?, login widget mustnt come out if redirect vars isn't set, page mustn't be served if logged in user ID doesn't exist, pick mustn't work if userId doesn't exist, ...more? )
+    * Complete missing bits (client/server) in the Local strategy (signin DONE, register, recover, resume DONE)
+      * For recovery, for now just create a hash/expiry in login info 
 
   ----
 
   * Make Comet messenging work again using JsonRestStores API only (it's currently completely broken)
-    * Add ability to filter for ranges as part of the JsonRestStore if necessary
+    * Add ability to filter for ranges as part of the JsonRestStore if necessary. YES do this one, it's necessary. Make it work
+      from URLs as well with searchSchema specific fields
     * Check hotDojoCometMessages/client/messages.js and hotDojoStores/client/AppStoreNotify.js: "add" needs to check if it's not within
       "add" like it happens in Observer.js (check if the Observer.js way is indeed sane)
+    * Figure out how to handle the recovery process, maybe 2 fields in the login info, a hash and an expiry, AND an URL to reset them?
+      IDEA. They all create a URL, with a temporary hash. Going to that URL makes the user logged in. Only lasts 30 minutes.
 
   ------
   * Move the buttonsConstructor somewhere where it makes more sense
@@ -340,3 +342,4 @@
   * NO, DONE Move hotplate's defined stuff (`vars`, etc.) into its own namespace? Bad idea. using "vars" as a global will work fine
   * Make the application's ability to refresh itself work again (config and normal)
   * Check why login/password in manager (client side) no longer works
+  * Add "resume" as an option (resume once logged in)
