--- a/TODO.txt
+++ b/TODO.txt
@@ -2,16 +2,15 @@
   "THE BASICS"
 
   * Make the new authentication fully work (add user when workspace is created, actually login when login is successful)
-    * --
-    * Fortify things a little (pages/ws/undefined works?!?, login widget mustnt come out if redirect vars isn't set, page mustn't be served if logged in user ID doesn't exist, pick mustn't work if userId doesn't exist, ...more? )
     * Complete missing bits (client/server) in the Local strategy (signin DONE, register, recover, resume DONE)
       * For recovery, for now just create a hash/expiry in login info 
 
   ----
 
   * Make Comet messenging work again using JsonRestStores API only (it's currently completely broken)
-    * Add ability to filter for ranges as part of the JsonRestStore if necessary. YES do this one, it's necessary. Make it work
-      from URLs as well with searchSchema specific fields
+    * STORES: Add ability to filter for ranges as part of the JsonRestStore if necessary. YES do this one, it's necessary. Make it work
+              from URLs as well with searchSchema specific fields
+    * STPRES: Add ability to scan through GetQuery by calling a function rather than returning an Array
     * Check hotDojoCometMessages/client/messages.js and hotDojoStores/client/AppStoreNotify.js: "add" needs to check if it's not within
       "add" like it happens in Observer.js (check if the Observer.js way is indeed sane)
     * Figure out how to handle the recovery process, maybe 2 fields in the login info, a hash and an expiry, AND an URL to reset them?
@@ -343,3 +342,5 @@
   * Make the application's ability to refresh itself work again (config and normal)
   * Check why login/password in manager (client side) no longer works
   * Add "resume" as an option (resume once logged in)
+  * Fortify things a little (pages/ws/undefined works?!?, login widget mustnt come out if redirect vars isn't set, page mustn't be served if
+    logged in user ID doesn't exist, pick mustn't work if userId doesn't exist, ...more? )
