Minor code fixups, made sure that the callback is always at the end in hooks signatures as it SHOULD

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,8 +3,7 @@
 
   1 DAY
   -----
-    * Document hotDojoAuth and hotCoreAuth before it's all sadly forgotten. This is ALSO the first documented module in hotplate
-
+    * Document hotplate, hotDojoAuth and hotCoreAuth before it's all sadly forgotten. This is ALSO the first documented module in hotplate
 
   AUTHENTICATION AND BASIC DOCUMENTATION DONE
   ===========================================
