--- a/TODO.txt
+++ b/TODO.txt
@@ -2,16 +2,12 @@
   "THE BASICS"
 
   NOW:
-    Fix serialize problem with JsonRestStores (2 ways... now?). Needs to return un-serialised data on GET
-    Decide on standard name of events: storeRecordRemove, storeRecordUpdate, storeRecordInsert sounds good
-    Chance client so that it uses new generic messages format
-    Finalise the tabIdHash function use -- is it really OK this way? I think so.
-    Finally, see comet actually work again in Hotplate
+    Make sure that an expired tab leads to a new request for a new tab, and reset of all client-side stores. Probably a NotFound error?
 
   MONGO:
     Add mass deletion in API
     Add cursor (with delete option) in API
-    Add range fields
+    Add range fields (from schema?)
 
   COMET:
     hotCoreComet:
@@ -19,9 +15,6 @@
       * Mass deletion of tab messages when tab expires (cron job too?)
       * See if/when using cursors makes sense
 
-  BOTH:
-     Make sure that tab expiration leads to registering a new tab _and_ refresh of all app stores
-                  
   3-5 DAYS:
   ----
   * Make Comet messenging work again using JsonRestStores API only (it's currently completely broken)
@@ -60,7 +53,6 @@
   * Ability to have range fields
   * Ability to have getQuery that returns a function rather than an array
   This will be enough for the messaging infrastructure, as well as the Comet infrastructure
-
 
   ------------------------------------------------
   AND THEN! Rewrite Hotplate, so that it doesn't have dependencies anymore (!)
@@ -390,3 +382,7 @@
   * Add a responseType to hotCoreAuth other than close, redirect etc. so that the window can stay open and actually show customisable contents
   * Convert Hotplate and any other module following the ritard "one singleton per module" pattern to a sane, simple Nodejs module.
   * Document hotplate.js properly, ask in StackOverflow what' a good way to create documentation from files. Needs to be EASY.
+  * Fix serialize problem with JsonRestStores (2 ways... now?). Needs to return un-serialised data on GET
+  * Chance client so that it uses new generic messages format
+  * Finalise the tabIdHash function use -- is it really OK this way? I think so.
+  * Finally, see comet actually work again in Hotplate -- it does, it does!
