Tons of changes to change in store structure, plus: +  * Make sure that a tab's lastSync time is updated every time there is a sync +  * Make sure that an expired tab leads to a new request for a new tab, and reset of all client-side stores.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,13 @@
 
   "THE BASICS"
 
-  NOW:
-    Make sure that an expired tab leads to a new request for a new tab, and reset of all client-side stores. Probably a NotFound error?
+    Change hotCoreStoreConfig.js so that the function that fetches config values is generic, and
+    is used ALSO when there is a reset of tab -- in which case, the reset ALSO returns the new settings. This will
+    save several gets for the config stores. This will save at least 3 gets, and a LOT of code client-side to run the gets
+    (e.g. what on earth should happen if one of the get fails...?)
+
+    NOTE: Change AppStoreNotify so that it doesn't zap config stores too or there might be a race condition
+    
 
   MONGO:
     Add mass deletion in API
@@ -386,3 +391,5 @@
   * Chance client so that it uses new generic messages format
   * Finalise the tabIdHash function use -- is it really OK this way? I think so.
   * Finally, see comet actually work again in Hotplate -- it does, it does!
+  * Make sure that a tab's lastSync time is updated every time there is a sync
+  * Make sure that an expired tab leads to a new request for a new tab, and reset of all client-side stores.
